--- a/README
+++ b/README
@@ -162,11 +162,7 @@ sudo rm -rf $PWD/graphite/storage/whisper/*
 ## Zabbix
 ```bash
 docker start zabbix-docker-mysql-server-1
-docker exec -it zabbix-docker-mysql-server-1 sh
-mysql -u zabbix -pzabbix
-```
-```sql
-CONNECT zabbix;
+docker exec -i zabbix-docker-mysql-server-1 mysql -u zabbix -pzabbix zabbix <<EOF
 TRUNCATE TABLE history;
 TRUNCATE TABLE history_log;
 TRUNCATE TABLE history_str;
@@ -174,7 +170,8 @@ TRUNCATE TABLE history_uint;
 TRUNCATE TABLE history_text;
 TRUNCATE TABLE trends;
 TRUNCATE TABLE trends_uint;
-
+EOF
+docker stop zabbix-docker-mysql-server-1
 ```
 
 ## Nagios
